# BoroMusic-ml

./: .gitignore  README.md  analyze_single_track.py  model.keras  music_db.csv  pyproject.toml  scaler.joblib  server.py  train_model.py  train_model_rgb.py
baseline-model/: model_baseline.keras  prepare_data.py  train_model.py
hybrid/: model_hybrid.keras  prepare_data_hybrid.py  scaler_x_hybrid.joblib  train_model_hybrid.py
rgb-model/: model_rgb.keras  prepare_data_rgb.py
rgb-model-dyn/: model_rgb.keras  prepare_data_dyn.py
rgb-model-dyn-huber/: evaluate_model.py  model_rgb.keras  scaler_rgb.joblib
